fix z-index, connect-us

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,7 @@
     .main-container-header{
       position: fixed;
       top: 0px;
+      z-index: 1;
       background-color: global.$backgroud-color-light;
 
       .main-menu{
